tests/fixtures/thf/invalid/truncated.thf
# ThreatForge Threat Model
# Invalid: the file was cut off mid-scalar, leaving an unterminated quoted string.
version: "1.0"
metadata:
  title: "Truncated Mod
